fix [frontend]: Fixed main overflow

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -4,9 +4,9 @@
   margin: 0;
   padding: 0;
 
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
-  overflow: scroll !important;
+  overflow-y: scroll !important;
 }
